--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -233,6 +233,7 @@
     <Content Include="Views\Home\StudentListe.cshtml" />
     <Content Include="Views\Home\OpretVirksomhed.cshtml" />
     <Content Include="Views\Home\VirksomhedListe.cshtml" />
+    <Content Include="Views\Home\OpretTilføjer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
