StudentOprettet View oprettet

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -242,6 +242,7 @@
     <Content Include="Views\Home\RedigerVirksomhed.cshtml" />
     <Content Include="Views\Home\RedigerTilføjer.cshtml" />
     <Content Include="Views\Home\RedigerBruger.cshtml" />
+    <Content Include="Views\Home\StudentOprettet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
