--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -243,6 +243,7 @@
     <Content Include="Views\Home\RedigerTilføjer.cshtml" />
     <Content Include="Views\Home\RedigerBruger.cshtml" />
     <Content Include="Views\Home\StudentOprettet.cshtml" />
+    <Content Include="Views\Home\StudentRedigeret.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
