--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -244,6 +244,8 @@
     <Content Include="Views\Home\RedigerBruger.cshtml" />
     <Content Include="Views\Home\StudentOprettet.cshtml" />
     <Content Include="Views\Home\StudentRedigeret.cshtml" />
+    <Content Include="Views\Home\VirksomhedOprettet.cshtml" />
+    <Content Include="Views\Home\VirksomhedRedigeret.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
