Har prøvet at rette fejl med database

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -191,6 +191,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Student.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Students.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
