--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -162,12 +162,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IStudentRepository.cs" />
+    <Compile Include="Abstract\IVirksomhedRepository.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\Ninject.Web.Common.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFStudentRepository.cs" />
+    <Compile Include="Concrete\EFVirksomhedRepository.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -192,6 +194,7 @@
       <DependentUpon>Student.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Students.cs" />
+    <Compile Include="Models\Virksomhed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
