Har lavet ny succes view til bruger

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -317,6 +317,7 @@
     <Content Include="Views\Home\StudentRedigeret.cshtml" />
     <Content Include="Views\Home\VirksomhedOprettet.cshtml" />
     <Content Include="Views\Home\VirksomhedRedigeret.cshtml" />
+    <Content Include="Views\Home\BrugerOprettet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
