Har lavet metode til redigering af Bruger, samt rettet views til

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -318,6 +318,7 @@
     <Content Include="Views\Home\VirksomhedOprettet.cshtml" />
     <Content Include="Views\Home\VirksomhedRedigeret.cshtml" />
     <Content Include="Views\Home\BrugerOprettet.cshtml" />
+    <Content Include="Views\Home\BrugerRedigeret.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
