Kan nu redigere tilføjer

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -323,6 +323,7 @@
     <Content Include="Views\Home\BrugerOprettet.cshtml" />
     <Content Include="Views\Home\BrugerRedigeret.cshtml" />
     <Content Include="Views\Home\TilføjerOprettet.cshtml" />
+    <Content Include="Views\Home\TilføjerRedigeret.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
