--- a/Hovedopgave1/Hovedopgave1/Web.config
+++ b/Hovedopgave1/Hovedopgave1/Web.config
@@ -24,6 +24,9 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <authentication mode="Forms">
+      <forms loginUrl="∼/Bruger/Login" timeout="1440"></forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
