Har lavet credentials til web config med bruger

--- a/Hovedopgave1/Hovedopgave1/Web.config
+++ b/Hovedopgave1/Hovedopgave1/Web.config
@@ -25,7 +25,12 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <authentication mode="Forms">
-      <forms loginUrl="∼/Bruger/Login" timeout="1440"></forms>
+      <forms loginUrl="∼/Bruger/Login" timeout="1440">
+        <credentials passwordFormat="Clear">
+          <user name="Karina" password="1234" />
+          <user name="Connie" password="9876"/>
+        </credentials>
+      </forms>
     </authentication>
   </system.web>
   <runtime>
