Har lavet FormsAuthProvider klassen og sat public på interface. Har tilføjet indhold til klassen

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Concrete\EFStudentRepository.cs" />
     <Compile Include="Concrete\EFTilføjerRepository.cs" />
     <Compile Include="Concrete\EFVirksomhedRepository.cs" />
+    <Compile Include="Concrete\FormsAuthProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
