--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -329,6 +329,7 @@
     <Content Include="Views\Home\TilføjerOprettet.cshtml" />
     <Content Include="Views\Home\TilføjerRedigeret.cshtml" />
     <Content Include="Views\Bruger\Login.cshtml" />
+    <Content Include="Views\Home\BrugerForside.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
