Lavet tilføjerlistebruger og tom medarbejderforside

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -330,6 +330,8 @@
     <Content Include="Views\Home\TilføjerRedigeret.cshtml" />
     <Content Include="Views\Bruger\Login.cshtml" />
     <Content Include="Views\Home\BrugerForside.cshtml" />
+    <Content Include="Views\Home\MedarbejderForside.cshtml" />
+    <Content Include="Views\Home\TilføjerListeBruger.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
