Har addet listerne på home controlleren. Virksomhedsliste er også oprettet(tom)

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -334,6 +334,7 @@
     <Content Include="Views\Home\TilføjerListeBruger.cshtml" />
     <Content Include="Views\Home\StudentListeMedarbejder.cshtml" />
     <Content Include="Views\Home\TilføjerListeMedarbejder.cshtml" />
+    <Content Include="Views\Home\VirksomhedListeMedarbejder.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
