Billeder fra Connie sat ind

--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -216,7 +216,10 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\FoodNetwoork_jpeg.jpg" />
+    <Content Include="Images\PA_logo_stor.jpg" />
     <Content Include="Images\RedigeretForside.PNG" />
+    <Content Include="Images\Vifu.jpg" />
     <Content Include="Models\Student.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Student.Context.cs</LastGenOutput>
