--- a/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
+++ b/Hovedopgave1/Hovedopgave1/Hovedopgave1.csproj
@@ -216,8 +216,8 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\EndeligeConnieForside.jpg" />
     <Content Include="Images\FoodNetwoork_jpeg.jpg" />
-    <Content Include="Images\ForsøgBillede10.png" />
     <Content Include="Images\PA_logo_stor.jpg" />
     <Content Include="Images\RedigeretForside.PNG" />
     <Content Include="Images\Vifu.jpg" />
